--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/newdb
+    url: jdbc:mysql://127.0.0.1:3306/spring_fantasy
     username: root
     password: password
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -8,4 +8,4 @@ spring:
     database: mysql
     show_sql: true
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
