--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/spring_fantasy
-    username: root
-    password: password
+    url: jdbc:mysql://127.0.0.1:3306/devdb
+    username: dev_team
+    password: caffeinecoders
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     database: mysql
