--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,12 @@
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/devdb
-    username: dev_team
-    password: caffeinecoders
+    url: jdbc:mysql://127.0.0.1:3306/spring_fantasy
+    username: root
+    password: password
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     database: mysql
     show_sql: true
     hibernate:
       ddl-auto: update
+
